added api to decreasy quantity of book
